omg we are dont for flip sake

--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -105,7 +105,7 @@
             <br>
             <label for="product_warranty">Product Warranty: </label>
             <input type="date" id="product_warranty" name="product_warranty" placeholder="if warranty...">
-            <button type="submit" id="submit" class="sign-up">Add Product</button>
+            <button type="submit" id="submit">Add Product</button>
         </div>
 
     </form>
